Rewrite ExanAnswers view

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -1,234 +1,40 @@
-﻿@model ExamAnswerViewModel
+﻿@model ExamAnswerListingViewModel
 
 <h2 class="text-align-center col-md-12">All exam questions and answers</h2>
 
-<h2 class="text-align-center col-md-12">April</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.April)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">May</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.May)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">June</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.June)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">July</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.July)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">August</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.August)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">September</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    </thead>
-    @foreach (var answer in Model.September)
+@{
+    var months = new List<string> { "April", "May", "June", "July", "August", "September", "October", "November", "December", "January", "February" };
+    foreach (var month in months)
     {
-        <tr>
-            <td class="text-align-center col-md-1">@answer.DateAsked</td>
-            <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-            <td class="col-md-4">@answer.QuestionAnswer</td>
-        </tr>
+        var answers = GetAnswersByMonth(month);
+        <h2 class="text-align-center col-md-12">@month</h2>
+        <table class="col-md-8 col-md-offset-2">
+            <thead>
+                <tr>
+                    <th class="text-align-center col-md-1">Date</th>
+                    <th class="col-md-7">Question</th>
+                    <th class="col-md-4">Answer</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var answer in answers)
+                {
+                    <tr>
+                        <td class="text-align-center">@answer.DateAsked</td>
+                        <td class="text-bright" style="white-space: pre-line;">@answer.QuestionAsked</td>
+                        <td>@answer.QuestionAnswer</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     }
-    </tbody>
-</table>
+}
 
-<h2 class="text-align-center col-md-12">October</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.October)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">November</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.November)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">December</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.December)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">January</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.January)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<h2 class="text-align-center col-md-12">February</h2>
-<table class="col-md-8 col-md-offset-2">
-    <thead>
-        <tr>
-            <th class="text-align-center col-md-1">Date</th>
-            <th class="col-md-7">Question</th>
-            <th class="col-md-4">Answer</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var answer in Model.February)
-        {
-            <tr>
-                <td class="text-align-center col-md-1">@answer.DateAsked</td>
-                <td class="col-md-7 text-bright">@answer.QuestionAsked</td>
-                <td class="col-md-4">@answer.QuestionAnswer</td>
-            </tr>
-        }
-    </tbody>
-</table>
+@functions {
+    private List<Answer> GetAnswersByMonth(string month)
+    {
+        return Model.Answers
+            .Where(answer => answer.Month.ToString() == month)
+            .ToList();
+    }
+}
