--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/_ViewImports.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Persona4GoldenHelper
 @using Persona4GoldenHelper.Models
+@using Persona4GoldenHelper.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
