--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -69,11 +69,11 @@ table {
         position: sticky;
         top: -1px;
         border: none;
-        padding: 7px;
+        padding: 7px !important;
     }
 
     table td {
-        padding: 5px 7px;
+        padding: 5px 7px !important;
     }
 
     table tr {
