Remove inline styling for white-space pre-line

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -18,7 +18,7 @@
                 <tr>
                     <td class="text-align-center col-md-1">@book.DateAvailable</td>
                     <td class="text-bright col-md-2">@book.Title</td>
-                    <td style="white-space: pre-line;">@book.Requirement</td>
+                    <td class="white-space-pre-line">@book.Requirement</td>
                     <td class="col-md-3">@book.Effect</td>
                 </tr>
             }
