--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -84,6 +84,10 @@ table {
             background-color: #333;
         }
 
+.white-space-pre-line {
+    white-space: pre-line;
+}
+
 .extra-slim-column {
     width: 5%;
 }
