Setup EF to use a database, create seeder for populating it

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -17,7 +17,7 @@
         @foreach (var quest in Model.Quests)
         {
             <tr>
-                <td class="text-align-center">@quest.Id</td>
+                <td class="text-align-center">@quest.Number</td>
                 <td class="text-bright">@quest.Title</td>
                 <td class="text-align-center">@quest.QuestGiver</td>
                 <td class="text-align-center">@quest.Location</td>
