--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Items">Items</a></li>
             <li class="divider"> | </li>
+            <li><a asp-controller="App" asp-action="SkillCards">Skill Cards</a></li>
+            <li class="divider"> | </li>
             <li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
         </ul>
     </div>
