--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
@@ -5,12 +5,33 @@
 }
 
 <div>
+    <h2 class="text-align-center col-md-12">Skill Card Locations</h2>
+    <table class="col-md-6 col-md-offset-3">
+        <thead>
+            <tr>
+                <th class="text-align-center">Dungeon</th>
+                <th class="text-align-center">Skill Card Ranks</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var skillCardLocation in Model.SkillCardLocations)
+            {
+                <tr>
+                    <td class="text-bright text-align-center">@skillCardLocation.DungeonName</td>
+                    <td class="text-align-center">Ranks @skillCardLocation.RankLowerBound-@skillCardLocation.RankUpperBound</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<div>
     @foreach (var type in types)
     {
         var skillCards = GetSkillCardsByType(type);
         <div>
             <h2 class="text-align-center col-md-12">@type</h2>
-            <table class="col-md-8 col-md-offset-2">
+            <table class="col-md-6 col-md-offset-3">
                 <thead>
                     <tr>
                         <th class="text-align-center">Rank</th>
