Make skill card location table column even

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
@@ -9,8 +9,8 @@
     <table class="col-md-6 col-md-offset-3">
         <thead>
             <tr>
-                <th class="text-align-center">Dungeon</th>
-                <th class="text-align-center">Skill Card Ranks</th>
+                <th class="text-align-center slim-column">Dungeon</th>
+                <th class="text-align-center slim-column">Skill Card Ranks</th>
             </tr>
         </thead>
         <tbody>
