--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -66,7 +66,7 @@ table {
     table th {
         background-color: #2a2a2a;
         color: #B4B4B4;
-        position: sticky;
+        position: sticky !important;
         top: -1px;
         border: none;
         padding: 7px !important;
