--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Quests">Quests</a></li>
             <li class="divider"> | </li>
+            <li><a asp-controller="App" asp-action="Lunches">Lunches</a></li>
+            <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="SkillCards">Skill Cards</a></li>
             <li class="divider"> | </li>
             <li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
