--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -30,4 +30,8 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+@if (!string.IsNullOrEmpty(ViewBag.PersonaName)) {
+    <script src="~/scipts/personaCalculator.js"></script>
+}
+
 @RenderSection("Scripts", required: false)
