Add all unimplemented pages to nav bar

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -10,15 +10,35 @@
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Skills">Skills</a></li>
             <li class="divider"> | </li>
+            <li class="text-dark">Calender</li>
+            <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Books">Books</a></li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Weapons</li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Armor</li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Accessories</li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Costumes</li>
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="ExamAnswers">Exam Answers</a></li>
             <li class="divider"> | </li>
+            <li class="text-dark">Gardening</li>
+            <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Quests">Quests</a></li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Shadows</li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Items</li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Social Links</li>
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Lunches">Lunches</a></li>
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="SkillCards">Skill Cards</a></li>
+            <li class="divider"> | </li>
+            <li class="text-dark">Dungeons</li>
             <li class="divider"> | </li>
             <li><a href="https://github.com/AndyCrocker/Persona4GoldenHelper" target="_blank">Source Code</a></li>
         </ul>
