--- a/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/wwwroot/css/site.css
@@ -51,6 +51,10 @@ body {
     color: #c5c1b9;
 }
 
+p {
+    font-size: 18px;
+}
+
 img {
     max-width: 26px;
     height: auto;
@@ -105,6 +109,10 @@ table {
 
 .slim-column {
     width: 8%;
+}
+
+.wide-column {
+    width: 15%;
 }
 
 .text-align-center {
