Add shadow controller and service

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             <li class="divider"> | </li>
             <li><a asp-controller="App" asp-action="Quests">Quests</a></li>
             <li class="divider"> | </li>
-            <li class="text-dark">Shadows</li>
+            <li><a asp-controller="Shadow" asp-action="Index">Shadows</a></li>
             <li class="divider"> | </li>
             <li class="text-dark">Items</li>
             <li class="divider"> | </li>
