Add mobile friendly width styling on all tables

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -3,7 +3,7 @@
 <div>
     <h2 class="text-align-center col-md-12">All Books</h2>
     <h5 class="text-align-center col-md-12">All the books in the game, including when they become available, the title, how to get them, and what effect they give once fully read.</h5>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th class="col-md-1 text-align-center">Available</th>
@@ -29,7 +29,7 @@
 <div>
     <h2 class="text-align-center col-md-12">Book Order</h2>
     <h5 class="text-align-center col-md-12">This is the order of the books in the inventory, to make it easier to see which books you are missing.</h5>
-    <table class="col-md-2 col-md-offset-5">
+    <table class="col-md-2 col-md-offset-5 col-sm-12">
         @foreach (var bookOrder in Model.BookOrder)
         {
             <tr>
