--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/ExamAnswers.cshtml
@@ -12,7 +12,7 @@
         var answers = GetAnswersByMonth(month);
         <div>
             <h2 class="text-align-center col-md-12">@month</h2>
-            <table class="col-md-8 col-md-offset-2">
+            <table class="col-md-8 col-md-offset-2 col-sm-12">
                 <thead>
                     <tr>
                         <th class="text-align-center col-md-1">Date</th>
