--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -1,6 +1,6 @@
 ﻿@model QuestListingViewModel
 
-<table class="col-md-10 col-md-offset-1">
+<table class="col-md-10 col-md-offset-1 col-sm-12">
     <thead>
         <tr>
             <th class="extra-slim-column text-align-center">Number</th>
