--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PersonaListingViewModel
 
 <div>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th class="extra-slim-column text-align-center">Level</th>
