--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Persona.cshtml
@@ -16,7 +16,7 @@
 
 <div>
     <h3 class="col-md-12 text-align-center">Stats</h3>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th class="text-align-center slim-column">Strength</th>
@@ -40,7 +40,7 @@
 
 <div>
     <h3 class="col-md-12 text-align-center">Elements</h3>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th class="text-align-center slim-column"><img src="~/img/Physical.png" alt="Physical" /></th>
@@ -68,7 +68,7 @@
 
 <div>
     <h3 class="col-md-12 text-align-center">Skills</h3>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th class="text-align-center">Level</th>
@@ -96,7 +96,7 @@
 
 <div>
     <h3 class="col-md-12 text-align-center">Recipes (<span id="recipe-count" class="text-dark">?</span>)</h3>
-    <div id="recipe-scroll" class="col-md-8 col-md-offset-2">
+    <div id="recipe-scroll" class="col-md-8 col-md-offset-2 col-sm-12">
         <table id="recipe-table" class="col-md-12">
             <thead>
                 <tr>
