--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Index.cshtml
@@ -7,7 +7,7 @@
     <p>All the sources for the data collected on the site are linked below, with some areas I've obtained manually in game.</p>
 </div>
 
-<table class="col-md-8 col-md-offset-2">
+<table class="col-md-8 col-md-offset-2 col-sm-12">
     <thead>
         <tr>
             <th class="wide-column">Information</th>
