--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LunchListingViewModel
 
-<table class="col-md-4 col-md-offset-4">
+<table class="col-md-4 col-md-offset-4 col-sm-12">
     <thead>
         <tr>
             <th class="slim-column text-align-center">Name</th>
