--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/SkillCards.cshtml
@@ -6,7 +6,7 @@
 
 <div>
     <h2 class="text-align-center col-md-12">Skill Card Locations</h2>
-    <table class="col-md-6 col-md-offset-3">
+    <table class="col-md-6 col-md-offset-3 col-sm-12">
         <thead>
             <tr>
                 <th class="text-align-center slim-column">Dungeon</th>
@@ -31,7 +31,7 @@
         var skillCards = GetSkillCardsByType(type);
         <div>
             <h2 class="text-align-center col-md-12">@type</h2>
-            <table class="col-md-6 col-md-offset-3">
+            <table class="col-md-6 col-md-offset-3 col-sm-12">
                 <thead>
                     <tr>
                         <th class="text-align-center">Rank</th>
