--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Skills.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SkillListingViewModel
 
 <div>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th>Name</th>
