--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div>
-    <table class="col-md-8 col-md-offset-2">
+    <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
                 <th>Name</th>
