Add headers to all views

--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Accessories.cshtml
@@ -1,6 +1,7 @@
 ﻿@model AccessoryListingViewModel
 
 <div>
+    <h2 class="text-align-center">Accessories</h2>
     <table class="col-md-8 col-md-offset-2">
         <thead>
             <tr>
