--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Books.cshtml
@@ -1,8 +1,7 @@
 ﻿@model BookListingViewModel
 
 <div>
-    <h2 class="text-align-center col-md-12">All Books</h2>
-    <h5 class="text-align-center col-md-12">All the books in the game, including when they become available, the title, how to get them, and what effect they give once fully read.</h5>
+    <h2 class="text-align-center">Books</h2>
     <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
