--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Quests.cshtml
@@ -1,31 +1,34 @@
 ﻿@model QuestListingViewModel
 
-<table class="col-md-10 col-md-offset-1 col-sm-12">
-    <thead>
-        <tr>
-            <th class="extra-slim-column text-align-center">Number</th>
-            <th>Title</th>
-            <th class="text-align-center">Quest Giver</th>
-            <th class="text-align-center">Location</th>
-            <th class="slim-column text-align-center">Available</th>
-            <th class="text-align-center">Prerequisities</th>
-            <th class="text-align-center">Reward</th>
-            <th>Instructions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var quest in Model.Quests)
-        {
+<div>
+    <h2 class="text-align-center">Quests</h2>
+    <table class="col-md-10 col-md-offset-1 col-sm-12">
+        <thead>
             <tr>
-                <td class="text-align-center">@quest.Number</td>
-                <td class="text-bright">@quest.Title</td>
-                <td class="text-align-center">@quest.QuestGiver</td>
-                <td class="text-align-center">@quest.Location</td>
-                <td class="text-align-center">@quest.DateAvailable</td>
-                <td class="text-align-center">@(quest.Prerequisites != "" ? quest.Prerequisites : "-")</td>
-                <td class="text-align-center">@(quest.Reward != "" ? quest.Reward : "-")</td>
-                <td>@quest.Instructions</td>
+                <th class="extra-slim-column text-align-center">Number</th>
+                <th>Title</th>
+                <th class="text-align-center">Quest Giver</th>
+                <th class="text-align-center">Location</th>
+                <th class="slim-column text-align-center">Available</th>
+                <th class="text-align-center">Prerequisities</th>
+                <th class="text-align-center">Reward</th>
+                <th>Instructions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var quest in Model.Quests)
+            {
+                <tr>
+                    <td class="text-align-center">@quest.Number</td>
+                    <td class="text-bright">@quest.Title</td>
+                    <td class="text-align-center">@quest.QuestGiver</td>
+                    <td class="text-align-center">@quest.Location</td>
+                    <td class="text-align-center">@quest.DateAvailable</td>
+                    <td class="text-align-center">@(quest.Prerequisites != "" ? quest.Prerequisites : "-")</td>
+                    <td class="text-align-center">@(quest.Reward != "" ? quest.Reward : "-")</td>
+                    <td>@quest.Instructions</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
