--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Persona/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonaListingViewModel
 
 <div>
+    <h2 class="text-align-center">Personas</h2>
     <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
