--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/Shadow/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div>
+    <h2 class="text-align-center">Shadows</h2>
     <table class="col-md-8 col-md-offset-2 col-sm-12">
         <thead>
             <tr>
