--- a/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
+++ b/Persona4GoldenHelper/Persona4GoldenHelper/Views/App/Lunches.cshtml
@@ -1,19 +1,22 @@
 ﻿@model LunchListingViewModel
 
-<table class="col-md-4 col-md-offset-4 col-sm-12">
-    <thead>
-        <tr>
-            <th class="slim-column text-align-center">Name</th>
-            <th class="slim-column text-align-center">Method</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var lunch in Model.Lunches)
-        {
+<div>
+    <h2 class="text-align-center">Lunches</h2>
+    <table class="col-md-4 col-md-offset-4 col-sm-12">
+        <thead>
             <tr>
-                <td class="text-bright text-align-center">@lunch.Name</td>
-                <td class="text-align-center">@lunch.Method</td>
+                <th class="slim-column text-align-center">Name</th>
+                <th class="slim-column text-align-center">Method</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var lunch in Model.Lunches)
+            {
+                <tr>
+                    <td class="text-bright text-align-center">@lunch.Name</td>
+                    <td class="text-align-center">@lunch.Method</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
